# ross-mcp

./: .env.example  .gitignore  .mp_projects_cache.json  CAPABILITIES.md  CLAUDE.md  QUICKBOOKS_TASK.md  README.md  ROADMAP.md  SPRINT.md  deploy.sh  fly.toml  mcp_server.py  pyproject.toml
agent/: agent.py  com.ross.mcp-agent.plist  healthcheck.sh  install.sh  requirements.txt  setup.sh  setup_azure.sh  web.py
agent/services/: apple_calendar.py  daily_brief.py  documents.py  enchant_base.py  enchant_cbs.py  enchant_rcsc.py  gmail.py  google_auth.py  google_calendar.py  mp_portal.py  notes.py  outlook_auth.py  outlook_calendar.py  outlook_mail.py  quickbooks.py  quickbooks_auth.py  reference.docx  reminders.py  voice_memos.py
elevenlabs/: CHANGELOG.md  rollback.py
elevenlabs/backups/: sophie-after-20260629-134536.json  sophie-after-20260629-141001.json  sophie-after-20260629-141444.json  sophie-after-20260629-141851.json  sophie-after-20260629-142210.json  sophie-after-20260629-142410.json  sophie-after-20260629-142631.json  sophie-before-20260629-133943.json
relay/: Dockerfile  dashboard.py  mcp_endpoint.py  openai_endpoints.py  relay.py  requirements.txt
shared/: messages.py
tests/: smoke_test.py
