[project]
name = "ross-mcp"
version = "0.1.0"
description = "Personal life admin via Claude - Apple Reminders, Calendar, Email"
requires-python = ">=3.11"

[project.optional-dependencies]
agent = [
    "websockets>=12.0",
    "pyobjc-core>=10.0",
    "pyobjc-framework-EventKit>=10.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "aiohttp>=3.9",
    "httpx>=0.27",
]
relay = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "mcp>=1.28",
]
